--- a/module-admin/src/main/resources/templates/saesigManage/infoForm.html
+++ b/module-admin/src/main/resources/templates/saesigManage/infoForm.html
@@ -1,22 +1,5 @@
-<div class="card">
-    <div class="card-header p-b-0 nav-main">
-        <ul class="nav nav-tabs md-tabs" role="tablist">
-            <li class="nav-item">
-                <a class="nav-link active" data-bs-toggle="tab" href="" role="tab" aria-selected="true">새식정보</a>
-                <div class="slide"></div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="" role="tab" aria-selected="false" id="chattingTab">채팅(0)</a>
-                <div class="slide"></div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="" role="tab" aria-selected="false" id="reportTab">신고(0)</a>
-                <div class="slide"></div>
-            </li>
-        </ul>
-    </div>
-    <!-- 기본정보 -->
-    <form th:object="${adopt}" method="post" id="adoptForm" name="adoptForm">
+<!-- 기본정보 -->
+<form th:object="${adopt}" method="post" id="adoptForm" name="adoptForm">
         <input type="hidden" th:field="*{id}">
         <div class="card-header p-b-0">
             <h3 class="sub-title"><strong>기본정보</strong>
@@ -193,7 +176,6 @@
         </div>
         <!-- // -->
     </form>
-</div>
 <div class="modal fade" id="imageModalPop" style="top: 23vh;">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content type_1">
@@ -233,10 +215,9 @@
     </div>
 </div>
 
-<script type="text/javascript" th:src="@{/js/ckeditor/ckeditorApplication.js}"></script>
-
 <script>
     $(function () {
+        ckeditorApp.setckeditor();
         const mySwiper = new Swiper('.swiper-container', {
             // 옵션 설정
             slidesPerView: 1, // 한 번에 표시할 슬라이드 수
